# CADET-Metapackage

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: publish.yml  test_compatability.yml  test_compatibility.yml  test_pypi_install.yml
